# wordcrab

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  wordcrab.rs
tests/: analyse_file.rs  analyse_files.rs  analysis_options.rs  simple_strings.rs
tests/content/: seitseman_veljesta.txt
