[package]
name = "wordcrab"
version = "0.11.1"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A command-line tool for counting lines, words and characters in documents."
repository = "https://github.com/Walther/wordcrab"
categories = ["command-line-utilities"]
readme = "README.md"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "Walther/wordcrab", branch = "master" }
codecov = { repository = "Walther/wordcrab", branch = "master", service = "github" }


[dependencies]
clap = "3.0.0-beta.1"
serde = "1.0.116"
serde_derive = "1.0.113"
serde_json = "1.0.55"
serde_yaml = "0.8.13"
toml = "0.5.6"
rayon = "1.3.1"

[profile.release]
lto = true
