[package]
name = "wordcrab"
version = "0.13.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command-line tool for counting lines, words and characters in documents."
repository = "https://github.com/Walther/wordcrab"
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "wordcrab"
crate-type = ["lib"]

[[bin]]
name = "wordcrab"

[dependencies]
clap = { version = "4.3.19", features = ["default", "derive", "color"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.0"
rayon = "1.7.0"

[profile.release]
lto = true
